changes for packaging